--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
       <table>
 <tr>
-  <td><img src="image/WhatsApp Image-modified (1).png" alt="My Profile Picture"/></td>
+  <td><img src="WhatsApp Image-modified (1).png" alt="My Profile Picture"/></td>
   <td><h1>Khujasta Mahjoor</h1>
     <em>Student of TTS program at<a href="https://auaf.edu.af/"> AUAF</a> and <a href="https://www.w3schools.com/tags/">Web developer</a></em>
     <p>I started web development and I am loving it!❤️</p></td>
